<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_bread_blue"
        android:orientation="vertical"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:paddingTop="70.0dip">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="57.0dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:background="@null"
                android:paddingTop="11.0dip"
                android:text="@string/country_and_area_hint"
                android:textColor="@color/color_99ffffff"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/tv_verify_login_country"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_country_arrow"
                android:gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="11.0dip"
                android:text="@string/china"
                android:textColor="@android:color/white"
                android:textSize="15.0sp" />

            <ImageView
                android:id="@id/iv_country_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10.0dip"
                android:paddingTop="11.0dip"
                android:src="@drawable/country_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ffffffff" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="57.0dip">

            <TextView
                android:id="@id/tv_country_phonenum"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:paddingRight="14.0dip"
                android:paddingTop="11.0dip"
                android:text="@string/china_phone_num"
                android:textColor="#ffffffff"
                android:textSize="15.0sp" />

            <View
                android:id="@id/v_phone_divider"
                android:layout_width="1.0dip"
                android:layout_height="fill_parent"
                android:layout_marginTop="21.0dip"
                android:layout_toRightOf="@id/tv_country_phonenum"
                android:background="#ffffffff" />

            <EditText
                android:id="@id/et_phone_num"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="25.0dip"
                android:layout_toRightOf="@id/v_phone_divider"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/phone_numb_hint"
                android:inputType="phone"
                android:maxLength="50"
                android:paddingTop="11.0dip"
                android:singleLine="true"
                android:textColor="#ffffffff"
                android:textColorHint="@color/color_99ffffff"
                android:textSize="15.0sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ffffffff" />

        <RelativeLayout
            android:id="@id/rl_regist_msgpin"
            android:layout_width="fill_parent"
            android:layout_height="57.0dip">

            <EditText
                android:id="@id/et_msg_pin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="25.0dip"
                android:layout_toLeftOf="@id/btn_get_msgpin"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingTop="11.0dip"
                android:singleLine="true"
                android:textColor="#ffffffff"
                android:textColorHint="@color/color_99ffffff"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/btn_get_verify_code"
                android:layout_width="100.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10.0dip"
                android:background="@drawable/btn_message_pin"
                android:gravity="center"
                android:text="@string/get_message_pin"
                android:textColor="@drawable/btn_msgpin_text_selector"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/tv_verify_login_timer"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="8.0dip"
                android:gravity="center"
                android:paddingTop="11.0dip"
                android:text="@string/get_mespin_timer"
                android:textColor="@color/color_99ffffff"
                android:textSize="12.0sp"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@id/v_msgpin_divider"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ffffffff" />

        <Button
            android:id="@+id/btn_verify_login"
            android:layout_width="180.0dip"
            android:layout_height="48.0dip"
            android:layout_gravity="center"
            android:layout_marginTop="70.0dip"
            android:background="@drawable/btn_regist_bg"
            android:contentDescription="@string/im_notos"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:textSize="19.0sp" />
    </LinearLayout>

    <ImageButton
        android:id="@id/ib_login_back"
        style="@style/wrap_content"
        android:background="@null"
        android:contentDescription="@string/im_button"
        android:paddingLeft="30.0dip"
        android:paddingTop="30.0dip"
        android:src="@drawable/back" />
</RelativeLayout>